--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@vueuse/core": "^9.2.0",
     "@vueuse/head": "^0.7.12",
     "autoprefixer": "^10.4.12",
-    "pinia": "^2.0.22",
+    "pinia": "^2.0.23",
     "postcss": "^8.4.17",
     "sass": "^1.55.0",
     "tailwindcss": "^3.1.8",
+    "uniqid": "^5.4.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^18.8.4",
+    "@types/uniqid": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
     "@vitejs/plugin-vue": "^3.1.0",
